--- a/src/app/modules/shared/skills/update-skill/update-skill.component.html
+++ b/src/app/modules/shared/skills/update-skill/update-skill.component.html
@@ -1,1 +1,20 @@
-<p>update-skill works!</p>
+<nz-page-header-title> Create Skill</nz-page-header-title>
+<form nz-form [formGroup]="skillForm" (ngSubmit)="onUpdate()">
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="SkillName" nzRequired>SkillName</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="SkillName" id="SkillName" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Description" nzRequired>Description</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="Description" id="Description" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary">Save</button>
+        </nz-form-control>
+    </nz-form-item>
+</form>
