--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/skill">Skill</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/settings/work-week">Work Week</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
