--- a/src/app/modules/shared/work-week/work-week-list/work-week-list.component.html
+++ b/src/app/modules/shared/work-week/work-week-list/work-week-list.component.html
@@ -1,1 +1,47 @@
-<p>work-week-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Week</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>WorkWeekId</th>
+        <th>Day</th>
+        <th>Status</th>
+        <th>Country</th>
+        <th>EmployeeId</th>
+        <th>UserId</th>
+        <th>CompanyId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _workWeekList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.workWeekId }}</td>
+        <td>{{ data.day }}</td>
+        <td>{{ data.status }}</td>
+        <td>{{ data.country }}</td>
+        <td>{{ data.employeeId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.workWeekId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteWorkWeek(data.workWeekId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
