--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,6 +100,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-skill">Employee Skill</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/leave-period">Leave Period</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
