--- a/src/app/modules/hrm/leave-rules/leave-rules-list/leave-rules-list.component.html
+++ b/src/app/modules/hrm/leave-rules/leave-rules-list/leave-rules-list.component.html
@@ -1,1 +1,57 @@
-<p>leave-rules-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Rules</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>LeaveRulesId</th>
+        <th>LeaveGroup</th>
+        <th>JobTitle</th>
+        <th>EmploymentStatus</th>
+        <th>EmployeeName</th>
+        <th>Experience</th>
+        <th>LeavePerYear</th>
+        <th>LeaveTypeId</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>JobTitleId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _leaveRulesList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.leaveRulesId }}</td>
+        <td>{{ data.leaveGroup  }}</td>
+        <td>{{ data.jobTitle }}</td>
+        <td>{{ data.employmentStatus}}</td>
+        <td>{{ data.employeeName}}</td>
+        <td>{{ data.experience}}</td>
+        <td>{{ data.leavePerYear}}</td>
+        <td>{{ data.leaveTypeId}}</td>
+        <td>{{ data.employeeId  }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>{{ data.JobTitleId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.leaveRulesId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteLeaveRules(data.leaveRulesId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
