--- a/src/app/modules/hrm/loan-type/update-loan-type/update-loan-type.component.html
+++ b/src/app/modules/hrm/loan-type/update-loan-type/update-loan-type.component.html
@@ -1,1 +1,20 @@
-<p>update-loan-type works!</p>
+<nz-page-header-title> Employee Loan Type</nz-page-header-title>
+<form nz-form [formGroup]="loanTypeForm" (ngSubmit)="onUpdate()">
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Name" nzRequired>Name</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="Name" id="Name" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Details" nzRequired>Details</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="Details" id="Details" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary">Save</button>
+        </nz-form-control>
+    </nz-form-item>
+</form>
