--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,6 +109,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/loan-type">Loan Type</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/monitor-attendance">Monitor Attendance</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
