--- a/src/app/modules/hrm/monitor-attendance/monitor-attendance-list/monitor-attendance-list.component.html
+++ b/src/app/modules/hrm/monitor-attendance/monitor-attendance-list/monitor-attendance-list.component.html
@@ -1,1 +1,49 @@
-<p>monitor-attendance-ist works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Monitor</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>MonitorAttendanceId</th>
+        <th>EmployeeName</th>
+        <th>TimeIn</th>
+        <th>TimeOut</th>
+        <th>Note</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _monitorAttendanceList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.monitorAttendanceId }}</td>
+        <td>{{ data.employeeName  }}</td>
+        <td>{{ data.timeIn | date:'d/M/Y'}}</td>
+        <td>{{ data.timeOut | date:'d/M/Y'}}</td>
+        <td>{{ data.note }}</td>
+        <td>{{ data.employeeId  }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.monitorAttendanceId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteMonitorAttendance(data.monitorAttendanceId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
