--- a/src/app/modules/hrm/my-project/create-my-project/create-my-project.component.html
+++ b/src/app/modules/hrm/my-project/create-my-project/create-my-project.component.html
@@ -1,1 +1,20 @@
-<p>create-my-project works!</p>
+<nz-page-header-title>My Project</nz-page-header-title>
+<form nz-form [formGroup]="myProjectForm" (ngSubmit)="onSubmit()">
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="MyProjectName" nzRequired>MyProjectName</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="MyProjectName" id="MyProjectName" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeId" nzRequired>Employee Id</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="EmployeeId" id="EmployeeId" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary">Save</button>
+        </nz-form-control>
+    </nz-form-item>
+</form>
