--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,6 +115,12 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/my-project">My Project</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/over-time">OverTime Request</a>
+                    </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/paid-time">Paid Time</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
