--- a/src/app/modules/hrm/over-time-request/over-time-request-list/over-time-request-list.component.html
+++ b/src/app/modules/hrm/over-time-request/over-time-request-list/over-time-request-list.component.html
@@ -1,1 +1,55 @@
-<p>over-time-request-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Overtime</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>OverTimeRequestId</th>
+        <th>EmployeeName</th>
+        <th>Category</th>
+        <th>StartTime</th>
+        <th>EndTime</th>
+        <th>Project</th>
+        <th>Status</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>OverTimeId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _overTimeRequestList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.overTimeRequestId }}</td>
+        <td>{{ data.employeeName  }}</td>
+        <td>{{ data.category }}</td>
+        <td>{{ data.startTime | date:'d/M/y'  }}</td>
+        <td>{{ data.endTime | date:'d/M/y' }}</td>
+        <td>{{ data.project }}</td>
+        <td>{{ data.status }}</td>
+        <td>{{ data.employeeId  }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>{{ data.overTimeId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.overTimeRequestId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteOverTimeRequest(data.overTimeRequestId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
