--- a/src/app/modules/hrm/paid-time-off/paid-time-off-list/paid-time-off-list.component.html
+++ b/src/app/modules/hrm/paid-time-off/paid-time-off-list/paid-time-off-list.component.html
@@ -1,51 +1,49 @@
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color = "#314ef2" type = "ball-scale-ripple-multiple" [fullScreen]="true" [showSpinner]="true">
+  <p style="color: rgb(74, 62, 247)"> Loading... </p>
+</ngx-spinner>
 <div class="table-operations">
-    <button nz-button [routerLink]="['create']">Create Paid Time</button>
-    <button nz-button>Sort age</button>
-    <button nz-button>Clear filters</button>
-    <button nz-button>Clear filters and sorters</button>
-  </div>
-  <div class="center">
-    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
-    </circle-progress>
-  </div>
-  <nz-table #filterTable nzTableLayout="fixed">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>PaidTimeOffId</th>
-        <th>LeaveType</th>
-        <th>EmployeeName</th>
-        <th>LeavePeriod</th>
-        <th>LeaveAmount</th>
-        <th>Note</th>
-        <th>EmployeeId</th>
-        <th>CompanyId</th>
-        <th>UserId</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let data of _paidTimeList; index as i">
-        <td>{{ i+1 }}</td>
-        <td>{{ data.paidTimeOffId }}</td>
-        <td>{{ data.leaveType  }}</td>
-        <td>{{ data.employeeName }}</td>
-        <td>{{ data.leavePeriod | date:'d/M/y' }}</td>
-        <td>{{ data.leaveAmount  }}</td>
-        <td>{{ data.note }}</td>
-        <td>{{ data.employeeId  }}</td>
-        <td>{{ data.companyId }}</td>
-        <td>{{ data.userId }}</td>
-        <td>
-          <nz-button-group>
-            <button nz-button nzType="primary" [routerLink]="['update/',data.paidTimeOffId]"><i nz-icon nzType="edit"
-                nzTheme="outline"></i></button>
-            <button nz-button nzType="primary" (click)="deletePaidTimeOff(data.paidTimeOffId)"><i nz-icon nzType="delete"
-                nzTheme="outline"></i></button>
-            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
-          </nz-button-group>
-        </td>
-      </tr>
-    </tbody>
-  </nz-table>
+  <button nz-button [routerLink]="['create']">Create Paid Time</button>
+  <button nz-button>Sort age</button>
+  <button nz-button>Clear filters</button>
+  <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>PaidTimeOffId</th>
+      <th>LeaveType</th>
+      <th>EmployeeName</th>
+      <th>LeavePeriod</th>
+      <th>LeaveAmount</th>
+      <th>Note</th>
+      <th>EmployeeId</th>
+      <th>CompanyId</th>
+      <th>UserId</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of _paidTimeList; index as i">
+      <td>{{ i+1 }}</td>
+      <td>{{ data.paidTimeOffId }}</td>
+      <td>{{ data.leaveType }}</td>
+      <td>{{ data.employeeName }}</td>
+      <td>{{ data.leavePeriod | date:'d/M/y' }}</td>
+      <td>{{ data.leaveAmount }}</td>
+      <td>{{ data.note }}</td>
+      <td>{{ data.employeeId }}</td>
+      <td>{{ data.companyId }}</td>
+      <td>{{ data.userId }}</td>
+      <td>
+        <nz-button-group>
+          <button nz-button nzType="primary" [routerLink]="['update/',data.paidTimeOffId]"><i nz-icon nzType="edit"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" (click)="deletePaidTimeOff(data.paidTimeOffId)"><i nz-icon nzType="delete"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+        </nz-button-group>
+      </td>
+    </tr>
+  </tbody>
+</nz-table>
