--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,6 +126,9 @@
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
                 <ul>
                     <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/personal-document">Personal Document</a>
+                    </li>
+                    <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-loan">Employee Loan</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
