--- a/src/app/modules/hrm/personal-document/personal-document-list/personal-document-list.component.html
+++ b/src/app/modules/hrm/personal-document/personal-document-list/personal-document-list.component.html
@@ -1,1 +1,49 @@
-<p>personal-document-list works!</p>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color = "#314ef2" type = "ball-scale-ripple-multiple" [fullScreen]="true" [showSpinner]="true">
+    <p style="color: rgb(74, 62, 247)"> Loading... </p>
+  </ngx-spinner>
+  <div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Personal Document</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>PersonalDocumentId</th>
+        <th>Document</th>
+        <th>ValidUntil</th>
+        <th>Status</th>
+        <th>Details</th>
+        <th>Attachment</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _personalDocumentList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.personalDocumentId }}</td>
+        <td>{{ data.document }}</td>
+        <td>{{ data.validUntil | date:'d/M/y'}}</td>
+        <td>{{ data.status  }}</td>
+        <td>{{ data.details }}</td>
+        <td>{{ data.attachment }}</td>
+        <td>{{ data.employeeId }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.personalDocumentId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deletePersonalDocument(data.personalDocumentId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
