--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -132,6 +132,9 @@
                         <a routerLink="dashboard/hrm/training-session">Training Session</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/training-setup">Training Setup</a>
+                    </li>
+                    <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-loan">Employee Loan</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
