--- a/src/app/modules/hrm/training-setup/training-setup-list/training-setup-list.component.html
+++ b/src/app/modules/hrm/training-setup/training-setup-list/training-setup-list.component.html
@@ -1,1 +1,63 @@
-<p>training-setup-list works!</p>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color = "#314ef2" type = "ball-scale-ripple-multiple" [fullScreen]="true" [showSpinner]="true">
+    <p style="color: rgb(74, 62, 247)"> Loading... </p>
+  </ngx-spinner>
+  <div class="table-operations">
+    <button nz-button [routerLink]="['create']">Training Setup</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>TrainingSetupId</th>
+        <th>Code</th>
+        <th>TrainingName</th>
+        <th>Coordinator</th>
+        <th>Trainer</th>
+        <th>TraineeName</th>
+        <th>TrainingDetails</th>
+        <th>PaymentType</th>
+        <th>Currency</th>
+        <th>Cost</th>
+        <th>StartDate</th>
+        <th>EndDate</th>
+        <th>Status</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _trainingSetupList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.trainingSetupId }}</td>
+        <td>{{ data.code }}</td>
+        <td>{{ data.trainingName}}</td>
+        <td>{{ data.coordinator  }}</td>
+        <td>{{ data.trainer}}</td>
+        <td>{{ data.traineeName}}</td>
+        <td>{{ data.trainingDetails }}</td>
+        <td>{{ data.paymentType }}</td>
+        <td>{{ data.currency }}</td>
+        <td>{{ data.cost  }}</td>
+        <td>{{ data.startDate | date:'d/M/y' }}</td>
+        <td>{{ data.endDate | date:'d/M/y' }}</td>
+        <td>{{ data.status }}</td>
+        <td>{{ data.employeeId }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.trainingSetupId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteTrainingSetup(data.trainingSetupId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
