--- a/src/app/modules/hrm/travel/travel-list/travel-list.component.html
+++ b/src/app/modules/hrm/travel/travel-list/travel-list.component.html
@@ -1,1 +1,59 @@
-<p>travel-list works!</p>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color = "#314ef2" type = "ball-scale-ripple-multiple" [fullScreen]="true" [showSpinner]="true">
+    <p style="color: rgb(74, 62, 247)"> Loading... </p>
+  </ngx-spinner>
+  <div class="table-operations">
+    <button nz-button [routerLink]="['create']">Travel</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>TravelId</th>
+        <th>MeansofTransportation</th>
+        <th>PurposeofTravel</th>
+        <th>TravelFrom</th>
+        <th>TravelTo</th>
+        <th>TravelDate</th>
+        <th>ReturnDate</th>
+        <th>Notes</th>
+        <th>Currency</th>
+        <th>TotalFundingProposed</th>
+        <th>Attachment</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _travelList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.travelId }}</td>
+        <td>{{ data.meansofTransportation }}</td>
+        <td>{{ data.purposeofTravel}}</td>
+        <td>{{ data.travelFrom  }}</td>
+        <td>{{ data.travelTo}}</td>
+        <td>{{ data.travelDate | date:'d/M/y' }}</td>
+        <td>{{ data.returnDate | date:'d/M/y' }}</td>
+        <td>{{ data.notes }}</td>
+        <td>{{ data.currency }}</td>
+        <td>{{ data.totalFundingProposed  }}</td>
+        <td>{{ data.attachment }}</td>
+        <td>{{ data.employeeId }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.travelId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteTravel(data.travelId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
