--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
@@ -32,5 +32,11 @@
                 </nz-button-group>
             </td>
         </tr>
+        <nz-button-group>
+            <button nz-button nzType="primary" (click)="handlePreviousPage($event)"><i nz-icon nzType="left"></i> Go
+                back</button>
+            <button nz-button nzType="primary" (click)="handleNextPage($event)">Go forward<i nz-icon
+                    nzType="right"></i></button>
+        </nz-button-group>
     </tbody>
 </nz-table>
