--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
@@ -1,13 +1,18 @@
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color="#314ef2" type="ball-scale-ripple-multiple"
+    [fullScreen]="true" [showSpinner]="true">
+    <p style="color: rgb(74, 62, 247)"> Loading... </p>
+</ngx-spinner>
 <div class="table-operations">
     <button nz-button [routerLink]="['create']">Create Attendance</button>
     <button nz-button>Sort age</button>
     <button nz-button>Clear filters</button>
     <button nz-button>Clear filters and sorters</button>
 </div>
-<nz-table #filterTable nzTableLayout="fixed">
+<nz-table #editRowTable nzBordered>
     <thead>
         <tr>
             <th>#</th>
+            <th>AttendanceId</th>
             <th>Time In</th>
             <th>Time Out</th>
             <th>Note</th>
@@ -18,6 +23,7 @@
     <tbody>
         <tr *ngFor="let data of _attendanceList; index as i">
             <td>{{i+1}}</td>
+            <td>{{data.attendanceId}}</td>
             <td>{{data.timeIn | date:'d/M/y'}}</td>
             <td>{{data.timeOut | date:'d/M/y'}}</td>
             <td>{{data.note}}</td>
