--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
@@ -8,7 +8,7 @@
     <button nz-button>Clear filters</button>
     <button nz-button>Clear filters and sorters</button>
 </div>
-<nz-table #editRowTable nzBordered>
+<nz-table #editRowTable nzBordered [nzData]="['']">
     <thead>
         <tr>
             <th>#</th>
