--- a/src/app/modules/hrm/paid-time-off/paid-time-off-list/paid-time-off-list.component.html
+++ b/src/app/modules/hrm/paid-time-off/paid-time-off-list/paid-time-off-list.component.html
@@ -7,7 +7,7 @@
   <button nz-button>Clear filters</button>
   <button nz-button>Clear filters and sorters</button>
 </div>
-<nz-table #filterTable nzTableLayout="fixed">
+<nz-table #editRowTable nzBordered [nzData]="['']">
   <thead>
     <tr>
       <th>#</th>
