--- a/src/app/modules/shared/language/language-list/language-list.component.html
+++ b/src/app/modules/shared/language/language-list/language-list.component.html
@@ -9,7 +9,7 @@
         [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
     </circle-progress>
   </div>
-  <nz-table #filterTable nzTableLayout="fixed">
+  <nz-table #editRowTable nzBordered [nzData]="['']">
     <thead>
       <tr>
         <th>#</th>
